--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,10 @@
         <h2>Carrinho de Compras</h2>
         <div id="carrinho-itens"></div>
         <p><strong>Total:</strong> R$ <span id="total">0.00</span></p>
+		<button onclick="window.location.href='/checkout'">Ir para compra</button>
+		<button onclick="limparCarrinho()">Limpar Carrinho</button>
     </div>
+	
 
     <script src="/js/script.js"></script>
 </body>
