--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,21 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja de Brinquedos</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Loja de Brinquedos</h1>
 
-    <div id="produtos"></div>
-    <div id="carrinho">
-        <h2>Carrinho de Compras</h2>
-        <div id="carrinho-itens"></div>
-        <p><strong>Total:</strong> R$ <span id="total">0.00</span></p>
-		<button onclick="window.location.href='/checkout.html'">Ir para compra</button>
-		<button onclick="limparCarrinho()">Limpar Carrinho</button>
+<div class="container text-center mt-5">
+    <h1 class="mb-4">Loja de Brinquedos</h1>
+    <div id="produtos" class="row justify-content-center"></div>
+
+    <div id="carrinho" class="card mt-4 w-25 style="width: 100px; height: 400px;">
+        <div class="card-body">
+            <h2>Carrinho de Compras</h2>
+            <div id="carrinho-itens" class="mb-3"></div>
+            <p><strong>Total:</strong> R$ <span id="total">0.00</span></p>
+            
+            <!-- Rodapé do carrinho com os botões -->
+            <div id="carrinho-footer">
+                <button class="btn btn-primary" onclick="window.location.href='/checkout.html'">Ir para compra</button>
+                <button class="btn btn-secondary" onclick="limparCarrinho()">Limpar Carrinho</button>
+            </div>
+        </div>
     </div>
-	
+</div>
 
-    <script src="/js/script.js"></script>
+<script src="/js/script.js"></script>
 </body>
 </html>
+
