--- a/src/main/resources/static/catalogo.html
+++ b/src/main/resources/static/catalogo.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="pt-br">
+<head> 
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Produtos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<!DOCTYPE html>
-	</head>
+	<link rel="stylesheet" href="style.css">
+</head>
 	<body>
 	    <div class="container">
 	        <h1>Lista de Produtos</h1>
