--- a/src/main/resources/static/catalogo.html
+++ b/src/main/resources/static/catalogo.html
@@ -8,6 +8,34 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 	<body>
+
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="index.html">Loja de Brinquedos</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+		
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="checkout.html">Carrinho</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="catalogo.html">Catálogo</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="equipe.html">Equipe</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="adm.html">Administração</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
 	    <div class="container">
 	        <h1>Lista de Produtos</h1>
 	        <table class="table table-striped">
@@ -24,5 +52,8 @@
 	    </div>
 
 	    <script src="/js/cat.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	</body>
 	</html>
