--- a/src/main/resources/static/checkout.html
+++ b/src/main/resources/static/checkout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -35,11 +36,11 @@
     </nav>
 
     <h1>Finalização de Compra</h1>
-    <div id="checkout-itens"></div>
+    <div id="checkout-itens">
     <p><strong>Total:</strong> R$ <span id="checkout-total">0.00</span></p>
     <button onclick="finalizarCompra()">Finalizar Compra</button>
     <button onclick="window.location.href='/'">Voltar para a Loja</button>
-
+</div>
     <script src="/js/checkout.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
