--- a/src/main/resources/static/equipe.html
+++ b/src/main/resources/static/equipe.html
@@ -48,42 +48,32 @@
                 </div>
             </div>
 
-            <!-- Membro da equipe: Ayrton -->
-            <div class="col-md-4 text-center mb-4">
-                <div class="card shadow">
-                    <img src="https://via.placeholder.com/150" alt="Foto de Ayrton" class="card-img-top rounded-circle mx-auto mt-3" style="width: 150px; height: 150px;">
-                    <div class="card-body">
-                        <h5 class="card-title">Ayrton</h5>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Membro da equipe: Bianca -->
+            <!-- Membro da equipe: Bianca Bomfim-->
             <div class="col-md-4 text-center mb-4">
                 <div class="card shadow">
                     <img src="https://via.placeholder.com/150" alt="Foto de Bianca" class="card-img-top rounded-circle mx-auto mt-3" style="width: 150px; height: 150px;">
                     <div class="card-body">
-                        <h5 class="card-title">Bianca</h5>
+                        <h5 class="card-title">Bianca Bomfim</h5>
                     </div>
                 </div>
             </div>
 
-            <!-- Membro da equipe: Danilo -->
+            <!-- Membro da equipe: Danilo Paulino -->
             <div class="col-md-4 text-center mb-4">
                 <div class="card shadow">
                     <img src="https://via.placeholder.com/150" alt="Foto de Danilo" class="card-img-top rounded-circle mx-auto mt-3" style="width: 150px; height: 150px;">
                     <div class="card-body">
-                        <h5 class="card-title">Danilo</h5>
+                        <h5 class="card-title">Danilo Paulino</h5>
                     </div>
                 </div>
             </div>
 
-            <!-- Membro da equipe: Paulo -->
+            <!-- Membro da equipe: Paulo Ricardo-->
             <div class="col-md-4 text-center mb-4">
                 <div class="card shadow">
                     <img src="https://via.placeholder.com/150" alt="Foto de Paulo" class="card-img-top rounded-circle mx-auto mt-3" style="width: 150px; height: 150px;">
                     <div class="card-body">
-                        <h5 class="card-title">Paulo</h5>
+                        <h5 class="card-title">Paulo Ricardo</h5>
                     </div>
                 </div>
             </div>
@@ -95,3 +85,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
